# cdatautils

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cvector-test.cpp  cvector.c  cvector.h  cvector.natvis
cdatautils/: CMakeLists.txt
cdatautils/hashmap/: CMakeLists.txt
cdatautils/hashmap/include/cdatautils/: hashmap.h
cdatautils/hashmap/src/: hashmap.c
cdatautils/hashmap/tests/: CMakeLists.txt  hashmap-test.cpp
cdatautils/ringbuffer/: CMakeLists.txt
cdatautils/ringbuffer/benchmarks/: CMakeLists.txt  ringbuffer.cpp
cdatautils/ringbuffer/include/cdatautils/: ringbuffer.h
cdatautils/ringbuffer/src/: ringbuffer.c
cdatautils/ringbuffer/tests/: CMakeLists.txt  ringbuffer-test.cpp
cdatautils/text/: CMakeLists.txt  cdatautils-text.natvis
cdatautils/text/include/cdatautils/: text.h
cdatautils/text/src/: text.c
cdatautils/text/tests/: CMakeLists.txt  text-test.cpp
cdatautils/vector/: CMakeLists.txt  cdatautils-vector.natvis
cdatautils/vector/example/cmake-project/: CMakeLists.txt  example_basic.c  example_custom_types.c
cdatautils/vector/include/cdatautils/: vector.h
cdatautils/vector/src/: vector.c
cdatautils/vector/tests/: CMakeLists.txt  vector-test.cpp
docs/: cvector.drawio  schematics.drawio
example/cmake-project/: CMakeLists.txt  example_basic.c  example_custom_types.c
